--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,4 +14,5 @@
 @import './components/buttons.css';
 @import './components/inputs.css';
 @import './components/explorer.css';
+@import './components/widget.css';
 @import './components/misc.css';
